[tool.poetry]
name = "rundreise"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bahnhofs-abfahrten-client = {git = "https://github.com/glanch/bahnhofs-abfahrten-client.git", branch = "main"}
ortools = "^9.3.10497"
networkx = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
